# Labratory-C-20465-2026B

./: .gitignore  CMakeLists.txt  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: maman11-ci.yml  maman12-ci.yml  maman22-ci.yml  maman23-ci.yml  ubuntu-ci.yml
maman11/: maman11.c
maman11/remove_blanks/: Makefile  remove_blanks  remove_blanks.c
maman11/remove_blanks/inputs/: test1.txt  test2.txt  test3.txt
maman11/remove_blanks/outputs/: error.txt  result1.txt  result2.txt  result3.txt
maman11/turn_on/: Makefile  turn_on.c
maman11/turn_on/inputs/: test1.txt  test2.txt  test3.txt
maman11/turn_on/outputs/: result1.txt  result2.txt  result3.txt
maman12/difference_and_sum/: Makefile  difference_and_sum.c  difference_and_sum.h
maman12/difference_and_sum/inputs/: test2.txt  test3.txt  test4.txt
maman12/difference_and_sum/outputs/: expected1.txt  expected2.txt  expected3.txt  expected4.txt  expected5.txt
maman22/mycomp/: Makefile  complex.c  complex.h  mycomp.c  mycomp.h
maman22/mycomp/inputs/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt
maman22/mycomp/outputs/: expected1.txt  expected2.txt  expected3.txt  expected4.txt  expected5.txt  expected6.txt  expected7.txt  expected8.txt  output_inalid.txt
maman23/seek/: Makefile  seek.c  seek.h
maman23/seek/inputs/: valid1.in  whitespace.in  windows.in
maman23/seek/outputs/: expected1.txt  expected2.txt  expected3.txt  expected4.txt  expected5.txt
